IKC-356 Functions and user groups configuration in database